--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script crossorigin src=""></script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/fire-logo.ico" />
+    <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -33,6 +38,12 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
+    <style>
+      .leaflet-container {
+        height: 800px;
+      }
+    </style>
 
     <title>Home - WildFire Detection System</title>
   </head>
